# ollama-kv-cache-tiering

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.json  go.mod
benches/: cache_bench.rs
cmd/patch-ollama/: main.go
diskstore/: store.go  store_test.go
kvcache/: tiered.go
patches/: ggml-paged-attention.patch  ollama-tiered-kvcache.patch
src/: config.rs  main.rs
src/cache/: block.rs  compressor.rs  evictor.rs  mod.rs  pager.rs  prefetcher.rs
src/gpu/: allocator.rs  device.rs  mod.rs
src/inference/: engine.rs  llama_ffi.rs  mod.rs  model_loader.rs
src/server/: mod.rs  openai_api.rs  streaming.rs
src/transfer/: disk_io.rs  dma_scheduler.rs  gpu_transfer.rs  mod.rs
tests/: cache_tests.rs  eviction_tests.rs  integration_tests.rs
